Functions allow pre-set variables, enabling closures